--- a/myweb/css/public.css
+++ b/myweb/css/public.css
@@ -69,6 +69,7 @@ a{color:#8a8280;}
     left:-15%;
     background:rgba(210,210,210,0.5);
     z-index: 3;
+    border:1px solid black;
 }
 #slip>ul
 {
